# multi-party-evaluator

./: Cargo.toml
data/: matmul.json  matmul_input.json  sum.json  sum_input.json
src/: evaluate.rs  lib.rs
