[package]
name = "multi-parti-evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "evaluate"
path = "src/evaluate.rs"

[dependencies]
ciphercore-base = "0.1"
ciphercore-utils = "0.1"
serde_json = "1.0.81"
clap = { version = "3.0.14", features = ["derive"] }
env_logger = "0.9.0"
chrono = "0.4.19"
